[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord_simple_pretty_help"
version = "0.0.1"
authors = [
    { name="Victor Bonnelle", email="victor.bonnelle@proton.me" },
]
description = " A simple yet pretty help menu for discord.py bots "
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/victorbnl/discord-simple-pretty-help"
"Bug Tracker" = "https://github.com/victorbnl/discord-simple-pretty-help/issues"
